# girl-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.example.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: docker-publish.yml  npm-publish.yml
desktop-rs/: .gitignore  Cargo.toml  README.md
desktop-rs/.cargo/: config.toml
desktop-rs/app/: Cargo.toml
desktop-rs/app/src/: app.rs  main.rs  state.rs  supervisor.rs  tray.rs
desktop-rs/app/src/ui/: dashboard.rs  minimize_popup.rs  mod.rs  profile_picker.rs  styles.rs
desktop-rs/app/src/web/: html.rs  mod.rs
desktop-rs/app/static/: app.css  app.js  index.html  landing.html
desktop-rs/installer/: Cargo.toml
desktop-rs/installer/src/: config.rs  data.rs  install.rs  main.rs  preflight.rs  tg_proxy.rs  ui.rs
desktop-rs/shared/: Cargo.toml
desktop-rs/shared/assets/fonts/: NOTICE.md
desktop-rs/shared/src/: config.rs  fonts.rs  lib.rs  paths.rs  runtime_client.rs  settings.rs  theme.rs  types.rs
docs/: configuration.html  configuration.md  dashboard.html  dashboard.md  features.html  features.md  index.html  index.md  installation.html  installation.md  realism.html  realism.md  troubleshooting.html  troubleshooting.md
landing/: README.md  index.html
scripts/: install.sh
src/: cli.tsx  headless.ts  server.ts  types.ts
src/dashboard/: index.tsx
src/data/: names.ts  timezones.ts
src/engine/: agenda.ts  behavior-tick.ts  conflict.ts  daily-life.ts  daily-summarizer.ts  hormones.ts  media.ts  persona-gen.ts  presence.ts  prompt.ts  realism.ts  reflect.ts  runtime.ts  security.ts  stickers.ts
src/llm/: index.ts
src/mcp/: client.ts
src/presets/: communication.ts  llm.ts  mcp.ts  stages.ts
src/storage/: md.ts
src/telegram/: bot.ts  index.ts  userbot.ts
src/wizard/: index.tsx
