[workspace]
resolver = "2"
members = [
    "shared",
    "app",
    "installer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TheSashaDev <void>"]
repository = "https://github.com/TheSashaDev/girl-agent"

[workspace.dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "image", "multi-window"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
directories = "5"
once_cell = "1"
futures-util = "0.3"
async-channel = "2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
