[workspace]
resolver = "2"
members = [
    "shared",
    "app",
    "installer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TheSashaDev <void>"]
repository = "https://github.com/TheSashaDev/girl-agent"

[workspace.dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "image", "multi-window"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
directories = "5"
once_cell = "1"
futures-util = "0.3"
async-channel = "2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Faster release build for testing artifacts: skips LTO and uses parallel codegen.
# Resulting binary is ~30-40% larger but compiles 4-6x faster.
[profile.release-fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
# Use unwind so our panic hook can flush a crash log before exit.
# release inherits panic = "abort" which kills the process before any
# I/O can complete, leaving the user with a silent close.
panic = "unwind"
strip = false

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

# Heavyweight deps still need optimisations to keep dev runs usable.
[profile.dev.package."*"]
opt-level = 1
