[package]
name = "girl-agent-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Iced-based Windows installer + persona setup wizard for girl-agent."

[[bin]]
name = "girl-agent-installer"
path = "src/main.rs"

[features]
default = []
# Embed bundled node.exe + cli.js + node_modules into the binary.
# Disabled when the runtime/ folder is empty (cargo check / dev build).
embed-runtime = []

[dependencies]
girl-agent-shared = { path = "../shared" }
iced = { workspace = true, features = ["tokio", "advanced", "image"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
open = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
lzma-rs = "0.3"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
rand = "0.8"
